# pr-generator

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.yaml.example  context7.json  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docker-build.yml  github-auto-assign.yml
src/pr_generator/: __init__.py  __main__.py  config.py  health.py  http_client.py  logging_config.py  models.py  scanner.py
src/pr_generator/providers/: base.py  bitbucket.py  github.py
tests/: conftest.py  test_config.py  test_health.py  test_http_client.py  test_logging_config.py  test_models.py  test_providers.py  test_scanner.py
